--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Lint and Audit
+name: Lint and Test
 
 on: [push, pull_request]
 
@@ -18,3 +18,16 @@ jobs:
         run: npm audit
       - name: Run ESLint
         run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.x'
+      - name: Install dependencies
+        run: npm install
+      - name: Test
+        run: npm run test
